Initial commit: добавлены все файлы проекта